front od strony studenta, upgrade do React 18

--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -6,6 +6,17 @@
     "target": "es5",
     "jsx": "react",
     "allowJs": true,
-    "moduleResolution": "Node"
-  }
+    "moduleResolution": "node",
+    "sourceMap": true,
+    "noImplicitReturns": true,
+    "noImplicitThis": true,
+    "strictNullChecks": true,
+    "lib": ["ES5","ES6", "DOM"]
+  },
+  "include": [
+    "./src"
+  ],
+  "exclude": [
+    "build"
+  ]
 }
