--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
     "react": "^17.0.0",
     "react-bootstrap": "^2.2.2",
     "react-dom": "^17.0.0",
+    "react-remarkable": "^1.1.3",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "typescript": "^4.6.3",
