--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.1.3",
     "react": "^17.0.0",
     "react-bootstrap": "^2.2.2",
+    "react-cookie": "^4.1.1",
     "react-dom": "^17.0.0",
     "react-remarkable": "^1.1.3",
     "react-router": "^6.3.0",
