--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
     "react-router": "^6.3.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "serve": "^13.0.2",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
   },
-
   "scripts": {
-    "start": "react-scripts start",
+    "start": "serve -s build",
+    "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
